--- a/text.html
+++ b/text.html
@@ -11,12 +11,25 @@
 		<script type="text/javascript" charset="utf-8" src='js/InteractiveBox.js'></script>
 	
 		<script type="text/javascript"> 
-			$(function() {
-				var dObj = new DiagramObject("body","diagram1", 160, 76, "#F4C8FF", "#BB6891");
-			});
+		  var app = {
+		    totalDiagrams: 0
+		  }
+		  
+		  function create() {
+		    
+		    var dObj = new DiagramObject("body", "diagram"+app.totalDiagrams, 160, 76, "#F4C8FF", "#BB6891");
+		    dObj.x(Math.random()*1000);
+		    dObj.y(Math.random()*600);
+		    app.totalDiagrams += 1;
+		  }
+
 		</script> 
 	</head>
 	<body>
+
+  
+
+      <p><input type="submit" onclick="create()" value="New Diagram"></p>
 
 	</body>
 
