--- a/text.html
+++ b/text.html
@@ -7,30 +7,12 @@
 		<link type="text/css" href="css/ui-lightness/jquery-ui-1.8.2.custom.css" rel="stylesheet" />	
 		<script type="text/javascript" src="js/jquery-1.4.2.min.js"></script>
 		<script type="text/javascript" src="js/jquery-ui-1.8.2.custom.min.js"></script>
-		<script type="text/javascript" charset="utf-8" src='js/box.js'></script>
-		<script type="text/javascript" charset="utf-8" src='js/InteractiveBox.js'></script>
+		<script type="text/javascript" charset="utf-8" src='js/diagram_creator.js'></script>
 	
-		<script type="text/javascript"> 
-		  var app = {
-		    totalDiagrams: 0
-		  }
-		  
-		  function create() {
-		    
-		    var dObj = new DiagramObject("body", "diagram"+app.totalDiagrams, 160, 76, "#F4C8FF", "#BB6891");
-		    dObj.x(Math.random()*1000);
-		    dObj.y(Math.random()*600);
-		    app.totalDiagrams += 1;
-		  }
-
-		</script> 
 	</head>
 	<body>
-
-  
-
       <p><input type="submit" onclick="create()" value="New Diagram"></p>
-
+      <canvas id="edge" width="600" height="400" style="border: 1px solid #777777;"></canvas>
 	</body>
 
 </html>
