--- a/client/text.html
+++ b/client/text.html
@@ -11,7 +11,7 @@
 	
 	</head>
 	<body>
-      <p><input type="submit" onclick="create()" value="New Diagram"></p>
+      <p><input type="submit" onclick="create_diagram()" value="New Diagram"></p>
       <p><input type="submit" onclick="create_edge()" value="New Edge Case"></p>
       
 	</body>
