--- a/client/text.html
+++ b/client/text.html
@@ -7,7 +7,7 @@
 		<link type="text/css" href="css/ui-lightness/jquery-ui-1.8.2.custom.css" rel="stylesheet" />	
 		<script type="text/javascript" src="js/jquery-1.4.2.min.js"></script>
 		<script type="text/javascript" src="js/jquery-ui-1.8.2.custom.min.js"></script>
-		<script type="text/javascript" charset="utf-8" src='js/diagram_creator.js'></script>
+		<script type="text/javascript" charset="utf-8" src='js/graphmecode.js'></script>
 	
 	</head>
 	<body>
