tons of refractoring. Also added a debugger.js file

--- a/client/text.html
+++ b/client/text.html
@@ -11,9 +11,9 @@
 	
 	</head>
 	<body>
-      <p><input type="submit" onclick="create_diagram()" value="New Diagram"></p>
-      <p><input type="submit" onclick="create_edge()" value="New Edge Case"></p>
-      
+      <p><input type="submit" onclick="app.create_diagram()" value="New Diagram"></p>
+      <p><input type="submit" onclick="app.create_edge()" value="New Edge Case"></p>
+      <textarea id="debugger" rows="40" cols="40"></textarea>
 	</body>
 
 </html>
