refactored file location

--- a/client/text.html
+++ b/client/text.html
@@ -5,8 +5,8 @@
 		<meta http-equiv="Content-type" content="text/html; charset=utf-8">
 		<title>Box using canvas</title>
 		<link type="text/css" href="css/ui-lightness/jquery-ui-1.8.2.custom.css" rel="stylesheet" />	
-		<script type="text/javascript" src="js/jquery-1.4.2.min.js"></script>
-		<script type="text/javascript" src="js/jquery-ui-1.8.2.custom.min.js"></script>
+		<script type="text/javascript" src="js/lib/jquery-1.4.2.min.js"></script>
+		<script type="text/javascript" src="js/lib/jquery-ui-1.8.2.custom.min.js"></script>
 		<script type="text/javascript" charset="utf-8" src='js/graphmecode.js'></script>
 	
 	</head>
