added another trace box for misc.

--- a/client/text.html
+++ b/client/text.html
@@ -13,7 +13,10 @@
 	<body>
       <p><input type="submit" onclick="app.create_diagram()" value="New Diagram"></p>
       <p><input type="submit" onclick="app.create_edge()" value="New Edge Case"></p>
-      <textarea id="debugger" rows="40" cols="40"></textarea>
+	  <textarea id="mouse_position" rows="2" cols="40"></textarea>
+	  <br>
+	  <br>
+	  <textarea id="debugger" rows="40" cols="40"></textarea>      
 	</body>
 
 </html>
